Fix paragraph text color in style.css for improved readability

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ h1{
 
 
 p{
-    color: #9c575723;
+    color: #f8f3f3;
     text-align: center;
     margin-top: 10px;
 
